// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogController (e2e) /blog/posts (POST) Create a blog post 1`] = `
{
  "content": "This is a test post",
  "createdAt": "[REDACTED]",
  "createdBy": "some-userid",
  "id": "[REDACTED]",
  "likes": 0,
  "title": "Test Post",
  "updatedAt": "[REDACTED]",
}
`;

exports[`BlogController (e2e) /blog/posts/:id (GET) Get a blog post by id 1`] = `
{
  "content": "This is a test post",
  "createdAt": "[REDACTED]",
  "createdBy": "some-userid",
  "id": "[REDACTED]",
  "likes": 0,
  "title": "Test Post",
  "updatedAt": "[REDACTED]",
}
`;

exports[`BlogController (e2e) /blog/posts/:id/like (PATCH) Like a blog post 1`] = `
{
  "content": "This is a test post",
  "createdAt": "[REDACTED]",
  "createdBy": "some-userid",
  "id": "[REDACTED]",
  "likes": 1,
  "title": "Test Post",
  "updatedAt": "[REDACTED]",
}
`;
